--- a/ui.ui
+++ b/ui.ui
@@ -25,11 +25,9 @@
             <property name="column_homogeneous">True</property>
             <child>
               <object class="GtkButton" id="Google_Earth">
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <child>
                   <object class="GtkBox" id="box1">
                     <property name="visible">True</property>
@@ -74,11 +72,9 @@
             <child>
               <object class="GtkButton" id="Adobe Flash">
                 <property name="label" translatable="yes">Adobe Flash</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -90,11 +86,9 @@
             <child>
               <object class="GtkButton" id="Dropbox">
                 <property name="label" translatable="yes">Dropbox</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
@@ -106,11 +100,9 @@
             <child>
               <object class="GtkButton" id="Google Chrome">
                 <property name="label" translatable="yes">Google Chrome</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
@@ -122,11 +114,9 @@
             <child>
               <object class="GtkButton" id="Opera">
                 <property name="label" translatable="yes">Opera</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">4</property>
@@ -138,11 +128,9 @@
             <child>
               <object class="GtkButton" id="Skype">
                 <property name="label" translatable="yes">Skype</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">5</property>
@@ -178,11 +166,9 @@
             <child>
               <object class="GtkButton" id="Adobe Reader">
                 <property name="label">Adobe Reader</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="image_position">bottom</property>
               </object>
               <packing>
@@ -196,11 +182,9 @@
               <object class="GtkButton" id="Microsoft_Schriftarten">
                 <property name="label" translatable="yes">Microsoft
 Schriftarten</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -236,13 +220,42 @@ Schriftarten</property>
             <property name="column_homogeneous">True</property>
             <child>
               <object class="GtkButton" id="Geogebra">
-                <property name="label">Geogebra 4.4</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <signal name="pressed" handler="skype_installieren" swapped="no"/>
+                <child>
+                  <object class="GtkBox" id="box2">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">20</property>
+                    <child>
+                      <object class="GtkLabel" id="Ank">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Anki</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkImage" id="Anki_logo">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="pixbuf">anki_logo.png</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -255,11 +268,9 @@ Schriftarten</property>
               <object class="GtkButton" id="Anki">
                 <property name="label" translatable="yes">Anki
 Vokabeltrainer</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <signal name="pressed" handler="skype_installieren" swapped="no"/>
               </object>
               <packing>
@@ -298,11 +309,9 @@ Vokabeltrainer</property>
               <object class="GtkButton" id="Paketlisten">
                 <property name="label">Paketlisten
 aktualisieren</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -315,11 +324,9 @@ aktualisieren</property>
               <object class="GtkButton" id="Update">
                 <property name="label" translatable="yes">LA-Tools
 aktualisieren</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
