--- a/ui.ui
+++ b/ui.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
+  <!-- interface-local-resource-path images -->
   <object class="GtkWindow" id="window1">
     <property name="width_request">500</property>
     <property name="height_request">147</property>
@@ -8,7 +9,7 @@
     <property name="has_focus">True</property>
     <property name="title" translatable="yes">LA-Tool</property>
     <property name="window_position">center</property>
-    <property name="icon">logo100x100.png</property>
+    <property name="icon">images/logo100x100.png</property>
     <signal name="delete-event" handler="onDeleteWindow" swapped="no"/>
     <child>
       <object class="GtkNotebook" id="notebook1">
@@ -25,9 +26,11 @@
             <property name="column_homogeneous">True</property>
             <child>
               <object class="GtkButton" id="Google_Earth">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <child>
                   <object class="GtkBox" id="box1">
                     <property name="visible">True</property>
@@ -72,9 +75,11 @@
             <child>
               <object class="GtkButton" id="Adobe Flash">
                 <property name="label" translatable="yes">Adobe Flash</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -86,9 +91,11 @@
             <child>
               <object class="GtkButton" id="Dropbox">
                 <property name="label" translatable="yes">Dropbox</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
@@ -100,9 +107,11 @@
             <child>
               <object class="GtkButton" id="Google Chrome">
                 <property name="label" translatable="yes">Google Chrome</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
@@ -114,9 +123,11 @@
             <child>
               <object class="GtkButton" id="Opera">
                 <property name="label" translatable="yes">Opera</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">4</property>
@@ -128,9 +139,11 @@
             <child>
               <object class="GtkButton" id="Skype">
                 <property name="label" translatable="yes">Skype</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">5</property>
@@ -166,9 +179,11 @@
             <child>
               <object class="GtkButton" id="Adobe Reader">
                 <property name="label">Adobe Reader</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
                 <property name="image_position">bottom</property>
               </object>
               <packing>
@@ -182,9 +197,11 @@
               <object class="GtkButton" id="Microsoft_Schriftarten">
                 <property name="label" translatable="yes">Microsoft
 Schriftarten</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -219,11 +236,13 @@ Schriftarten</property>
             <property name="row_homogeneous">True</property>
             <property name="column_homogeneous">True</property>
             <child>
-              <object class="GtkButton" id="Geogebra">
+              <object class="GtkButton" id="Anki">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <signal name="pressed" handler="skype_installieren" swapped="no"/>
+                <property name="use_action_appearance">False</property>
+                <signal name="pressed" handler="anki_installieren" swapped="no"/>
                 <child>
                   <object class="GtkBox" id="box2">
                     <property name="visible">True</property>
@@ -231,7 +250,7 @@ Schriftarten</property>
                     <property name="orientation">vertical</property>
                     <property name="spacing">20</property>
                     <child>
-                      <object class="GtkLabel" id="Ank">
+                      <object class="GtkLabel" id="Anki_labek">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Anki</property>
@@ -246,7 +265,7 @@ Schriftarten</property>
                       <object class="GtkImage" id="Anki_logo">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="pixbuf">anki_logo.png</property>
+                        <property name="pixbuf">images/anki_logo.png</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -265,13 +284,45 @@ Schriftarten</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="Anki">
-                <property name="label" translatable="yes">Anki
-Vokabeltrainer</property>
+              <object class="GtkButton" id="Geogebra">
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <signal name="pressed" handler="skype_installieren" swapped="no"/>
+                <property name="use_action_appearance">False</property>
+                <signal name="pressed" handler="geogebra_installieren" swapped="no"/>
+                <child>
+                  <object class="GtkBox" id="box3">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
+                    <property name="spacing">20</property>
+                    <child>
+                      <object class="GtkLabel" id="ggb_label">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Geogebra</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkImage" id="ggb_logo">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="pixbuf">images/geogebra.png</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -309,9 +360,11 @@ Vokabeltrainer</property>
               <object class="GtkButton" id="Paketlisten">
                 <property name="label">Paketlisten
 aktualisieren</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -324,9 +377,11 @@ aktualisieren</property>
               <object class="GtkButton" id="Update">
                 <property name="label" translatable="yes">LA-Tools
 aktualisieren</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="use_action_appearance">False</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
